--- a/springbootconfig/src/main/resources/application-prod.properties
+++ b/springbootconfig/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@
 
 app.message=This is the property file fo the ${spring.application.name} specific to PROD Environment
 
-spring.datasource.driver-class-name=.com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=<MYSQL_URL>
 spring.datasource.username=<USERNAME>
 spring.datasource.password=<PASSWORD>
